import {getTester} from './utils/test.js';

const {test} = getTester(import.meta);

test.snapshot({
	valid: [
		'a { color: red; }',
		'a { overflow-x: hidden; }',
		'a { overflow-y: auto; }',
		'a { overflow-block: scroll; }',
		'a { overflow: visible; }',
		'a { overflow: hidden; }',
		'a { overflow: auto scroll; }',
		'a { overflow: visible clip; }',
		'a { overflow: clip visible; }',
		'a { overflow: clip hidden; }',
		'a { overflow-x: visible; overflow-y: visible; }',
		'a { overflow-x: hidden; overflow-y: auto; }',
		'a { overflow-inline: visible; overflow-block: clip; }',
		'a { overflow: hidden visible; overflow: hidden; }',
		'a { overflow: hidden visible; overflow-y: auto; }',
		'a { overflow: hidden visible; overflow-x: clip; }',
		'a { overflow-x: hidden; overflow-y: visible; overflow: auto; }',
		'a { overflow-x: auto !important; overflow-x: visible; overflow-y: hidden; }',
		'a { overflow: hidden !important; overflow-y: visible; }',
		'a { overflow: hidden visible; overflow: var(--overflow); }',
		'a { overflow-x: hidden; overflow-y: visible; overflow-y: var(--overflow, visible); }',
		'a { overflow-x: hidden; overflow-y: visible; overflow-x: env(overflow); }',
		'a { overflow: var(--overflow) visible; }',
		'a { overflow: hidden visible; overflow: inherit; }',
		'a { overflow: hidden visible; overflow-y: initial; }',
		'a { overflow: hidden visible; overflow-x: unset; }',
		'a { overflow: hidden visible; overflow: revert; }',
		'a { overflow: hidden visible; overflow-y: revert-layer; }',
		'a { overflow: hidden visible; all: unset; }',
		'a { overflow: hidden visible; all: var(--reset); }',
		'a { overflow: hidden visible; all: unset !important; overflow: hidden visible; }',
		'a { overflow-x: hidden; overflow-y: visible; overflow-block: auto; }',
		'a { overflow-block: hidden; overflow-inline: visible; overflow-y: auto; }',
		'a { overflow: hidden visible; overflow-inline: auto; }',
		'a { overflow: hidden; overflow-inline: visible; }',
		'a { overflow-x: hidden; } b { overflow-y: visible; }',
		'a { overflow-x: hidden; & b { overflow-y: visible; } }',
		'a { overflow-x: hidden; @media (width > 0px) { overflow-y: visible; } }',
		'a { --overflow: hidden visible; content: "overflow: hidden visible"; background: url("hidden-visible"); }',
		'a { -webkit-overflow-x: hidden; overflow-y: visible; }',
		'@supports (overflow: hidden visible) { a { color: red; } }',
		'@keyframes slide { from { overflow: hidden visible; } }',
		'@-webkit-keyframes slide { to { overflow: hidden visible; } }',
		'@font-face { overflow: hidden visible; }',
		'@page { overflow: hidden visible; }',
		':export { overflow: hidden visible; }',
		':import("theme.css") { overflow-x: hidden; overflow-y: visible; }',
		{
			code: 'a { overflow: .; overflow-x: hidden; overflow-y: .; }',
			languageOptions: {tolerant: true},
		},
		String.raw`a { overflow: hidden !\69 mportant; overflow-y: visible; }`,
		String.raw`a { overflow: hidden visible; overflow-y: v\61 r(--overflow); }`,
		'a { overflow: hidden visible !important; overflow: var(--overflow) !important; }',
		'a { overflow-block: hidden; overflow-inline: visible; all: unset; }',
		'a { all: unset !important; overflow-block: hidden !important; overflow-inline: visible; }',
	],
	invalid: [
		'a { overflow-x: hidden; overflow-y: visible; }',
		'a { overflow-y: visible; overflow-x: hidden; }',
		'a { overflow-y: hidden; overflow-x: visible; }',
		'a { overflow: hidden visible; }',
		'a { overflow: visible hidden; }',
		'a { overflow: auto visible; }',
		'a { overflow: visible scroll; }',
		'a { overflow: overlay visible; }',
		'a { overflow-x: visible; overflow-y: overlay; }',
		'a { overflow-block: hidden; overflow-inline: visible; }',
		'a { overflow-inline: auto; overflow-block: visible; }',
		'a { writing-mode: vertical-rl; overflow-block: visible; overflow-inline: scroll; }',
		'a { OVERFLOW-X: HIDDEN; OVERFLOW-Y: VISIBLE; }',
		String.raw`a { \6f verflow-x: h\69 dden; overflow-y: \76 isible; }`,
		String.raw`a { \6f verflow: visible \73 croll; }`,
		'a { overflow: /* before */ hidden /* between */ visible /* after */ !important; }',
		'a { overflow-x: hidden; color: red; overflow-y: /* keep */ visible; }',
		'a { overflow: visible; overflow-x: hidden; }',
		'a { overflow: hidden; overflow-y: visible; }',
		'a { overflow: auto; overflow-x: visible; }',
		'a { overflow-x: hidden; overflow-y: auto; overflow-y: visible; }',
		'a { overflow: hidden visible !important; overflow: hidden; }',
		'a { overflow-x: hidden; overflow-y: visible !important; overflow-y: auto; }',
		'a { overflow-y: auto; overflow: hidden visible !important; }',
		'a { overflow: auto !important; overflow-x: visible !important; }',
		'a { overflow: hidden visible !important; overflow: auto !important; overflow: hidden visible !important; }',
		'a { overflow: hidden visible !important; overflow: var(--overflow); }',
		'a { overflow: hidden visible !important; all: unset; }',
		'a { all: unset; overflow: hidden visible; }',
		'a { overflow: hidden visible; all: unset; overflow-x: hidden; overflow-y: visible; }',
		'a { overflow: hidden visible; overflow: invalid; }',
		'a { overflow-x: hidden; overflow-y: visible; overflow-y: "auto"; }',
		'a { overflow: hidden visible; overflow-x: visible hidden; }',
		'a { overflow: hidden visible; overflow: hidden visible auto; }',
		'a { overflow: hidden visible; all: auto; }',
		'a { & b { overflow: hidden visible; } }',
		'@media (width > 0px) { a { overflow: hidden visible; } }',
		'a { @supports (display: grid) { overflow-x: hidden; overflow-y: visible; } }',
		'a { @container (width > 0px) { overflow: visible auto; } }',
		'@layer theme { @scope (.card) { a { overflow: hidden visible; } } }',
		'a { @starting-style { overflow: hidden visible; } }',
		'a { overflow: hidden visible; & b { overflow: visible auto; } }',
		'a {\r\n  overflow-x: hidden;\r\n  overflow-y: visible;\r\n}',
		String.raw`a { overflow: hidden visible !\69 mportant; overflow: auto; }`,
		'a { overflow: hidden visible !IMPORTANT; overflow: auto; }',
		'a { all: unset !important; overflow-block: hidden !important; overflow-inline: visible !important; }',
		'a { overflow: var(--overflow); overflow-x: hidden; overflow-y: visible; }',
	],
});

test({
	valid: [],
	invalid: [{
		code: 'a { overflow-x: hidden; overflow-y: visible; }',
		errors: [{
			messageId: 'no-overflow-axis-coercion',
			data: {
				property: 'overflow-y',
				otherProperty: 'overflow-x',
				otherValue: 'hidden',
				firstProperty: 'overflow-x',
				firstValue: 'hidden',
				secondProperty: 'overflow-y',
				secondValue: 'auto',
			},
			column: 37,
			endColumn: 44,
			suggestions: [],
		}],
	}],
});
